add court camera

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -90,6 +90,12 @@ camera:
   - platform: ffmpeg
     name: arthur_cam
     input: -rtsp_transport tcp -i rtsp://192.168.10.161/unicast
+  - platform: onvif
+    name: Court Camera
+    host: http://192.168.10.171:2020/onvif/device_service
+    port: 2020
+    username: !secret TAPO_USERNAME
+    password: !secret TAPO_PASSWORD
   # - platform: mjpeg
   #   name: arthur_cam_mjpeg
   #   mjpeg_url: rtsp://192.168.20.62/unicast
