--- a/configuration.yaml
+++ b/configuration.yaml
@@ -112,17 +112,15 @@ device_tracker:
     home_id: !secret TADO_HOME_ID
 
 homekit:
+  name: HA Bridge
   filter:
+    include_domains:
+      - light
+      - switch
+      - media_player
     include_entities:
-      - demo.demo
-  # filter:
-  #   include_domains:
-  #     - light
-  #     - switch
-  #     - media_player
-  #   include_entities:
-  #     - binary_sensor.door_window_sensor_158d00014dbac9
-  #     - binary_sensor.door_window_sensor_158d0001f3a0f0
+      - binary_sensor.door_window_sensor_158d00014dbac9
+      - binary_sensor.door_window_sensor_158d0001f3a0f0
 
 # emulated_hue:
 #   exposed_domains:
