--- a/packages/rooms/wohnzimmer/wohnzimmer.yaml
+++ b/packages/rooms/wohnzimmer/wohnzimmer.yaml
@@ -37,7 +37,7 @@ light:
     devices:
       192.168.10.136:
         name: wz_schreibtisch_led
-        mode: w
+        mode: rgbw
       192.168.10.148:
         name: wz_wand_led
         mode: rgbw
