--- a/configuration.yaml
+++ b/configuration.yaml
@@ -63,6 +63,8 @@ recorder:
 #         calendar: Family
 #         search: 'Urlaub'
 
+themes: !include_dir_merge_named themes
+
 tts:
   - platform: google_translate
     language: 'de'
