--- a/scripts/all_off.yaml
+++ b/scripts/all_off.yaml
@@ -1,10 +1,10 @@
 all_off:
   sequence:
     - service: script.sonos_pause
+    - service: light.turn_off
+      entity_id: all
+    - service: switch.turn_off
+      entity_id: all
     - service: homeassistant.turn_off
-      data:
-        entity_id:
-          - group.all_lights
-          - group.all_switches
-          - media_player.denon_avr_x1100w
+      entity_id: media_player.denon_avr_x1100w
     - service: script.tv_turn_off
