--- a/packages/rooms/toilette/automations/toilette_heating.yaml
+++ b/packages/rooms/toilette/automations/toilette_heating.yaml
@@ -1,4 +1,26 @@
 automation:
+  - alias: Turn toilett heating on when home
+    trigger:
+      platform: state
+      entity_id: person.familie
+      to: 'home'
+    action:
+      - service: climate.set_hvac_mode
+        entity_id: switch.toilett_floor_heating
+        data:
+          hvac_mode: auto
+
+  - alias: Turn toilett heating off when nobody is home
+    trigger:
+      platform: state
+      entity_id: person.familie
+      to: 'not_home'
+    action:
+      - service: climate.set_hvac_mode
+        entity_id: switch.toilett_floor_heating
+        data:
+          hvac_mode: off
+
   - alias: Turn toilett heating off when window opened
     trigger:
       platform: state
@@ -11,4 +33,15 @@ automation:
     action:
       - service: switch.turn_off
         entity_id: switch.toilett_floor_heating
+
+  - alias: Turn toilett heating off when window closed
+    trigger:
+      platform: state
+      entity_id: binary_sensor.door_window_sensor_158d0001f3a0f0
+      to: 'off'
+    action:
+      - service: climate.set_hvac_mode
+        entity_id: switch.toilett_floor_heating
+        data:
+          hvac_mode: auto
 
