--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,10 +21,11 @@ discovery:
 custom_icons:
 
 http:
-  base_url: !secret URL_HASS
   use_x_forwarded_for: True
   trusted_proxies:
     - 127.0.0.1
+  ip_ban_enabled: true
+  login_attempts_threshold: 10
 
 downloader:
   download_dir: 'www/downloads'
