--- a/packages/rooms/wohnzimmer/automations/wz_switches.yaml
+++ b/packages/rooms/wohnzimmer/automations/wz_switches.yaml
@@ -39,5 +39,5 @@ automation:
           click_type: both
     action:
       - service: light.toggle
-        entity_id: light.wz_schreibtisch_led
+        entity_id: light.wz_lichtkugel
 
