--- a/packages/rooms/wohnzimmer/automations/wz_auto_lighting.yaml
+++ b/packages/rooms/wohnzimmer/automations/wz_auto_lighting.yaml
@@ -47,6 +47,39 @@ automation:
           - switch.wz_light1
           - switch.wz_light2
 
+  - alias: wz_wall_auto_off
+    trigger:
+      - platform: state
+        entity_id: light.wz_wand_led
+        to: 'on'
+        for:
+          hours: 4
+    action:
+      - service: light.turn_off
+        entity_id: light.wz_wand_led
+
+  - alias: wz_schreibtisch_auto_off
+    trigger:
+      - platform: state
+        entity_id: light.wz_schreibtisch_led
+        to: 'on'
+        for:
+          hours: 4
+    action:
+      - service: light.turn_off
+        entity_id: light.wz_schreibtisch_led
+
+  - alias: wz_lichtkugel_auto_off
+    trigger:
+      - platform: state
+        entity_id: light.wz_lichtkugel
+        to: 'on'
+        for:
+          hours: 4
+    action:
+      - service: light.turn_off
+        entity_id: light.wz_lichtkugel
+
   - alias: wz_watch_tv
     trigger:
       platform: state
