fix entity config

--- a/packages/rooms/wohnzimmer/wohnzimmer.yaml
+++ b/packages/rooms/wohnzimmer/wohnzimmer.yaml
@@ -35,11 +35,11 @@ switch:
 light:
   - platform: flux_led
     devices:
-      192.168.10.136:
-        name: wz_schreibtisch_led
-        mode: rgbw
+      #192.168.10.136:
+      #  name: wz_schreibtisch_led
+      #  mode: rgbw
       192.168.10.148:
-        name: wz_wand_led
+        name: wz_schreibtisch_led
         mode: rgbw
 
   - platform: hyperion
