--- a/configuration.yaml
+++ b/configuration.yaml
@@ -37,13 +37,6 @@ hacs:
 
 wake_on_lan:
 
-# logger:
-#   default: info
-#   logs:
-#     homeassistant.components.alexa: debug
-#     homeassistant.components.homekit: debug
-#     pyhap: debug
-
 recorder:
   purge_keep_days: 7
   exclude:
@@ -184,7 +177,8 @@ panel_iframe:
     require_admin: true
 
 alexa: !include alexa.yaml
-automation: !include_dir_merge_list automations
+automation: !include automations.yaml
+automation old: !include_dir_merge_list automations
 group: !include_dir_merge_named groups
 ios: !include ios.yaml
 script: !include_dir_merge_named scripts
