--- a/configuration.yaml
+++ b/configuration.yaml
@@ -181,5 +181,6 @@ automation: !include automations.yaml
 automation old: !include_dir_merge_list automations
 group: !include_dir_merge_named groups
 ios: !include ios.yaml
-script: !include_dir_merge_named scripts
+script: !include scripts.yaml
+script_old: !include_dir_merge_named scripts
 sensor: !include_dir_merge_list sensor
